--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: >
 # Build settings
 
 # If you clone the Minima repo and build locally, use this setting.
-theme: minima
+# theme: minima
 
 # As of November 2023, GitHub Pages still uses Minima 2.5.1 (https://pages.github.com/versions/). 
 # If you want to use the latest Minima version on GitHub Pages, use the following setting and 
@@ -25,7 +25,7 @@ plugins:
   - jekyll-seo-tag
 
 # Minima specific settings, which are only available from Minima 3.0 onward.
-minima:
+# minima:
   # Minima skin selection.
   # Available skins are:
   # classic	           Default, light color scheme.
@@ -34,13 +34,13 @@ minima:
   # solarized-light	   Light variant of solarized color scheme.
   # solarized-dark	   Dark variant of solarized color scheme.
   # solarized	         Adaptive skin for solarized color scheme skins.
-  skin: classic
+#  skin: classic
 
   # If you want to link only specific pages in the site-navigation, use this and list
   # the `path` property (as represented via Liquid) of the pages in the order they should
   # be rendered.
-  nav_pages:
-    - about.md
+#   nav_pages:
+#     - about.md
 
   # Set to `true` to show excerpts on the homepage.
   #show_excerpts: false
