--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,16 @@ description: >
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-archives
+
+jekyll-archives:
+  enabled: [tags, categories]  # 启用标签和分类归档
+  layouts:
+    tag: tag.html              # 标签归档的布局文件
+    category: category.html    # 分类归档的布局文件
+  permalinks:
+    tag: /tags/:name/          # 标签归档的 URL 格式
+    category: /categories/:name/  # 分类归档的 URL 格式
 
 # Minima specific settings, which are only available from Minima 3.0 onward.
 # minima:
