--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           github_token: ${{ secrets.PAT }}
           publish_dir: ./_site
-          publish_branch: master
+          publish_branch: output
