--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ jekyll-archives:
     tag: tag              # 标签归档的布局文件
     category: category    # 分类归档的布局文件
   permalinks:
-    tag: /tags/:name          # 标签归档的 URL 格式
-    category: /categories/:name  # 分类归档的 URL 格式
+    tag: /tags/:name/          # 标签归档的 URL 格式
+    category: /categories/:name/  # 分类归档的 URL 格式
 
 # Minima specific settings, which are only available from Minima 3.0 onward.
 # minima:
