--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Your awesome title
+title: Portgas·D·Asce's blog
 author:
-  name: GitHub User
+  name: Portgas·D·Asce
   email: your-email@domain.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
