--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -34,8 +34,9 @@ jobs:
 
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
+        run: |
+          vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
       
