--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -33,7 +33,7 @@ jobs:
           publish_branch: output
 
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
+        # uses: amondnet/vercel-action@v20
         run: |
           vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
         with:
