--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -32,15 +32,22 @@ jobs:
           publish_dir: ./_site
           publish_branch: output
 
+      # - name: Deploy to Vercel
+      #   uses: amondnet/vercel-action@v20
+      #   with:
+      #     vercel-token: ${{ secrets.VERCEL_TOKEN }}
+      #     vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+      #     vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+      
       - name: Deploy to Vercel
         # uses: amondnet/vercel-action@v20
         run: |
           vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
-        with:
+        env:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
       
-      # 无需配置, output 刷新后自动部署到生产
+      # 无需配置
       # - name: Deploy to Netlify
       #   uses: netlify/actions/cli@v2
       #   with:
