--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -38,9 +38,11 @@ jobs:
       #     vercel-token: ${{ secrets.VERCEL_TOKEN }}
       #     vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
       #     vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+
+      - name: Install Vercel CLI
+        run: npm install -g vercel@latest
       
       - name: Deploy to Vercel
-        # uses: amondnet/vercel-action@v20
         run: |
           vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
         env:
