--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Deploy to Vercel
         run: |
           vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
+                --yes
         env:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
