--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -46,9 +46,9 @@ jobs:
         run: |
           vercel deploy --prod \
             --token=${{ secrets.VERCEL_TOKEN }} \
-            --yes \
-            --scope=${{ secrets.VERCEL_ORG_ID }}
+            --yes
         env:
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       
       # 无需配置
