--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -48,7 +48,7 @@ jobs:
             --token=${{ secrets.VERCEL_TOKEN }} \
             --yes
         env:
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
       
       # 无需配置
