--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-archives
+  - jekyll-category-hierarchy
 
 jekyll-archives:
   enabled: [tags, categories]  # 启用标签和分类归档
