--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Portgas·D·Asce's blog
 description: Technology summarization for personal usage.
-url: https://portgas-d-asce.github.io
+url: https://xdevil.top
 author:
   name: Portgas·D·Asce
   email: Portgas·D·Asce@gmail.com
