--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Portgas·D·Asce's blog
 description: Technology summarization for personal usage.
 url: https://xdevil.top
-base: ""
+baseurl: ""
 author:
   name: Portgas·D·Asce
   email: Portgas·D·Asce@gmail.com
